--- a/wyszukaj_dysk_systemowy.0.1
+++ b/wyszukaj_dysk_systemowy.0.1
@@ -1,13 +1,22 @@
 #!/bin/bash -xv
 
 #wyszukaj dysk systemowy
-for PARTYCJA in `cat ../badanie/system_info/partycje_win.txt`
+for PARTYCJA in `cat ${KATALOG_GLOWNY}/system_info/partycje_win.txt`
 do
-	find /media/${PARTYCJA} -maxdepth 1 -type d -name "Users" -print >> ../system_info/partycja_startowa_windows.txt
+	find /media/${PARTYCJA} -maxdepth 1 -type d -name "Users" -print >> ${KATALOG_GLOWNY}/system_info/partycja_startowa_windows.txt
 done
 
+DATA=`date "+%y-%m-%d %H:%M:%S"`
 
+#zapisuje loga
+#jesli plik istnieje i nie jest pusty
+if [ -e ${KATALOG_GLOWNY}/system_info/partycja_startowa_windows.txt ] && [ -s  ${KATALOG_GLOWNY}/system_info/partycja_startowa_windows.txt ]
+then
+	DISKWIN=$(cat ${KATALOG_GLOWNY}/system_info/partycja_startowa_windows.txt)
+	echo $DATA "- Disk with Windows 7 / Vista found in " $DISKWIN > ${KATALOG_GLOWNY}/log.txt	
+else
+	echo $DATA "- System with Windows not found. No file or file is empty" > ${KATALOG_GLOWNY}/log.txt
+fi
 
-#alternatywne rozwiazanie minimalnie wolniejsze
-
+#alternatywne rozwiazanie minimalnie wolniejsze, jako ciekawostka
 #awk '{system("find \/media\/"$0" -maxdepth 1 -type d -name \"Users\" >> partycja_startowa_windows.txt")}' ../system_info/partycje_win.txt
