--- a/utworz_katalogi_poczty.0.1
+++ b/utworz_katalogi_poczty.0.1
@@ -1,5 +1,7 @@
 #!/bin/bash 
 
+KATALOG_GLOWNY=~/DW/badanie
+
 #tworzy katalogi poczty dla konktretnego uzytkownika
 for UZYTKOWNIK in `cat ${KATALOG_GLOWNY}/system_info/uzytkownicy_systemu.txt`
    do
