--- a/wyszukaj_uzytkownikow_systemu.0.1
+++ b/wyszukaj_uzytkownikow_systemu.0.1
@@ -1,6 +1,8 @@
-#!/bin/bash
+#!/bin/bash -x
 
 #skrypt wyszukuje uzytkownikow systemu windows 7 / Vista w katalogu Users
+
+KATALOG_GLOWNY=~/DW/badanie
 
 PARTYCJA=$(cat ${KATALOG_GLOWNY}/system_info/partycja_startowa_windows.txt)
  
