--- a/znajdz_pliki.0.1
+++ b/znajdz_pliki.0.1
@@ -2,6 +2,8 @@
 
 #skrypt wyszukuje i zapisuje pliki
 
+KATALOG_GLOWNY=~/DW/badanie
+
 # okresla formaty plikow ktore beda wyszukiwane
 RODZAJE_PLIKOW="txt lnk doc xls pdf odt ods odp jpg png gif wav mp3 avi mov mp4 htm html"
 
