--- a/zamontuj_partycje.0.1
+++ b/zamontuj_partycje.0.1
@@ -1,12 +1,19 @@
-#!/bin/bash -v
+#!/bin/bash -x
 
 #skrypt wyszukuje i montuje partycje windosowe
 
+KATALOG_GLOWNY=~/DW/badanie
+
+
 function sprawdz_czy_dysk_zamontowany() {
+    DATA=`date "+%y-%m-%d %H:%M:%S"`
     if [ -n "$(grep $1 /proc/mounts)" ]
     then
+	#zapis do loga
+  	echo $DATA "- Checking- Partition /dev/${1} mounted already" >> ${KATALOG_GLOWNY}/log.txt
         return 1 #zamontowany
     else
+	echo $DATA "- Checking- Partition /dev/${1} not mounted" >> ${KATALOG_GLOWNY}/log.txt
         return 0 #nie zamontowany
     fi 
 }
@@ -17,7 +24,7 @@ function montujemy() {
   sudo mount -r /dev/"$1" /media/"$1" 
   #zapis do loga
   DATA=`date "+%y-%m-%d %H:%M:%S"`
-  echo $DATA "- Partition /dev/${1} mounted in /media/{$1}" >> ${KATALOG_GLOWNY}/log.txt
+  echo $DATA "- Partition /dev/${1} mounted in /media/${1}" >> ${KATALOG_GLOWNY}/log.txt
 	
 }
 
